--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "coco",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.26.0",
     "chalk": "^5.0.0",
     "dedent-js": "^1.0.1"
   }
